--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-ng-annotate",
+  "name": "@pioug/gulp-ng-annotate",
   "version": "2.1.0",
   "description": "Add angularjs dependency injection annotations with ng-annotate",
   "main": "index.js",
@@ -30,7 +30,7 @@
     "bufferstreams": "^1.1.0",
     "gulp-util": "^3.0.7",
     "merge": "^1.2.0",
-    "ng-annotate": "git://github.com/pioug/ng-annotate#v1.3.0",
+    "@pioug/ng-annotate": "~1.3.1",
     "through2": "^2.0.1",
     "vinyl-sourcemaps-apply": "^0.2.1"
   },
